--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-  <div class="d-flex align-items-center justify-content-center conteiner">
+  <div class="conteiner">
     <div class="row justify-content-center">
       <div class="col-md config-all teste" id="config-left">
         <div class="geral">
@@ -22,7 +22,7 @@
           <h2 >Sedans</h2>
           <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
           or on your next road trip.</p>
-          <button class="btn bg-white text-warning botao">Leardn More</button>
+          <button class="btn bg-white text-warning botao">Learn More</button>
         </div>
       </div>
 
@@ -32,7 +32,7 @@
           <h2>SUVs</h2>
           <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
           and off-road adventures.</p>
-          <button class="btn bg-white">Leardn More</button>
+          <button class="btn bg-white">Learn More</button>
         </div>
   
       </div>
@@ -43,7 +43,7 @@
           <p>Luxury
           Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
           rental and arrive in style.</p>
-          <button class="btn bg-white">Leardn More</button>
+          <button class="btn bg-white">Learn More</button>
         </div>
       </div>
     </div>
