--- a/index.html
+++ b/index.html
@@ -14,36 +14,36 @@
 
 </head>
 <body>
-  <div class="conteiner">
-    <div class="row justify-content-center">
-      <div class="col-md config-all teste" id="config-left">
+  <div class="">
+    <div class="row justify-content-center align-items-center conteudo ">
+      <div class="col-auto config-all teste" id="config-left">
         <div class="geral">
           <img src="./images/icon-sedans.svg" alt="Sedans">
           <h2 >Sedans</h2>
           <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
           or on your next road trip.</p>
-          <button class="btn bg-white text-warning botao">Learn More</button>
+          <button class="btn bg-white sedans">Learn More</button>
         </div>
       </div>
 
-      <div class="col-md config-all" id="config-center">
+      <div class="col-auto config-all" id="config-center">
         <div class="geral">
-          <img src="./images/icon-suvs.svg" alt="Sedans">
+          <img src="./images/icon-suvs.svg" alt="SUVs">
           <h2>SUVs</h2>
           <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
           and off-road adventures.</p>
-          <button class="btn bg-white">Learn More</button>
+          <button class="btn bg-white text">Learn More</button>
         </div>
   
       </div>
-      <div class="col-md config-all" id="config-right">
+      <div class="col-auto config-all" id="config-right">
         <div class="geral">
-          <img src="./images/icon-luxury.svg" alt="Sedans">
+          <img src="./images/icon-luxury.svg" alt="Luxury">
           <h2>Luxury</h2>
           <p>Luxury
           Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
           rental and arrive in style.</p>
-          <button class="btn bg-white">Learn More</button>
+          <button class="btn bg-white luxury">Learn More</button>
         </div>
       </div>
     </div>
